fix layout shift

--- a/packages/jest-doctor/docs/assets/css/site.css
+++ b/packages/jest-doctor/docs/assets/css/site.css
@@ -235,7 +235,7 @@ table td {
   height: 30px;
 }
 
-@media (max-width: 446px) {
+@media (max-width: 450px) {
   /* fix layout shift */
   #-getting-started + p {
     height: 53px;
